Данные выведены на публичную страницу, реализована защита от неавторизованного входа, lazy loading

--- a/src/admin/components/reviewForm/reviewForm.pcss
+++ b/src/admin/components/reviewForm/reviewForm.pcss
@@ -32,6 +32,12 @@
   }
 }
 
+.uploader.active {
+  &:after {
+    background: none;
+  }
+}
+
 .uploader-btn {
   .input-btn {
     font-weight: 600;
