--- a/src/styles/blocks/skills-row.pcss
+++ b/src/styles/blocks/skills-row.pcss
@@ -10,14 +10,11 @@
 
 .skills-row__list {
   display: flex;
-  justify-content: space-between;
-
-  @include phones {
-    flex-wrap: wrap;
-  }
+  flex-wrap: wrap;
 }
 
 .skills-row__item {
+  margin-right: 2%;
   @include phones {
     margin-bottom: 15px;
   }
