--- a/src/templates/components/reviews.pug
+++ b/src/templates/components/reviews.pug
@@ -25,6 +25,6 @@ script(type="text/x-template")#slider-container
                   .user-display__avatar-style
                     img(:src="review.pic").user-display__pic
                 .user-display__data
-                  .user-display__name {{review.name}}
+                  .user-display__name {{review.author}}
                   .user-display__occ {{review.occ}}
   
