--- a/src/admin/components/reviewCard/reviewCard.pcss
+++ b/src/admin/components/reviewCard/reviewCard.pcss
@@ -1,7 +1,8 @@
-.review-wrapper {
+.reviews-wrapper {
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .user {
@@ -15,6 +16,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .text {
