--- a/src/admin/pages/about/about.pcss
+++ b/src/admin/pages/about/about.pcss
@@ -6,4 +6,9 @@
 .item {
   width: calc(100% / 2 - 30px);
   margin-right: 30px;
+  margin-bottom: 30px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
