--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -1,6 +1,7 @@
 script(type="text/x-template")#preview-container
   .works-preview
     display(
+      v-if="currentWork"
       :currentWork="currentWork"
       :works="works"
       :slidable="slidable"
@@ -8,7 +9,9 @@ script(type="text/x-template")#preview-container
       @thumb="thumb"
     )
     info(
+      v-if="currentWork"
       :currentWork="currentWork"
+      :works="works"
     )
 
 script(type="text/x-template")#preview-display
@@ -56,7 +59,7 @@ script(type="text/x-template")#preview-info
       )
       .works-preview__title {{currentWork.title}}
       .works-preview__desc 
-        p {{currentWork.desc}}
+        p {{currentWork.description}}
       a(:href="currentWork.link").iconed-link Посмотреть сайт
 
 script(type="text/x-template")#preview-tags
