добавлена анимация слайдера works

--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -174,4 +174,23 @@
 }
 
 
+.works-leave-active, .v-enter-active {
+  transition: 0.5s;
+}
+
+.works-leave {
+  opacity: 1;
+}
+.works-leave-to {
+  opacity: 0;
+}
+
+
+.works-enter {
+  opacity: 0;
+}
+.works-enter-to {
+  opacity: 1;
+}
+
 
