--- a/src/templates/components/works.pug
+++ b/src/templates/components/works.pug
@@ -17,7 +17,8 @@ script(type="text/x-template")#preview-container
 script(type="text/x-template")#preview-display
    .works-preview__pictures(:data-slide='currentWork.id')
       .works-preview__img-wrapper
-        img(:src="currentWork.photo").works-preview__img
+        transition(name="works")
+          img(:src="currentWork.photo" :key="currentWork.id").works-preview__img
       .works-preview__thumbs
         thumbs(
           :works="reversedWorks"
