--- a/src/index.pug
+++ b/src/index.pug
@@ -3,24 +3,25 @@ include ./mixins.pug
 
 block content 
   .welcome-section
-    section.hero
+    section.hero(id='homepage')
       .container.hero__container
         header.header.hero__header
-          a.logo(href='#') ФР
+          a.logo(href='#homepage') ФР
 
           nav.menu.hero__menu
             - var menuItems = ['Обо мне', 'Навыки', 'Работы', 'Отзывы']
+            - var ids = ['#about','#skills','#works','#reviews']
             ul.menu__list
-              each item in menuItems 
+              each item, ndx in menuItems 
                 li.menu__item
-                  a(href='#').menu__link #{item}
+                  a(href=ids[ndx]).menu__link #{item}
           
-          - var socials = [['insta'], ['github'], ['vk'], ['envelope']]
+          - var socials = [['insta', 'https://www.instagram.com/'], ['github', 'https://github.com/Fanis-Rakhmatullin'], ['vk', 'https://vk.com/'], ['envelope', 'mailto:faniskin1@gmail.com']]
           ul.socials.socials--header--tablet
             each item in socials 
               li.socials__item
-                a(href='').socials__link
-                  +icon(item, 'socials__icon')
+                a(href=item[1]).socials__link
+                  +icon(item[0], 'socials__icon')
 
           a.hamburger-btn(href="#")
             +icon('menu', 'hamburger-btn__icon')
@@ -30,9 +31,10 @@ block content
             .userinfo__title Личный сайт#[br]веб разработчика
             h1.userinfo__name Фанис Рахматуллин
 
-        .hero__bottom-buttons
-          button.scroll-down-btn Скролл
-    section.about
+        .hero__bottom-text 
+          a.scroll-down-btn(href='#about') Давайте знакомиться
+          
+    section.about(id='about')
       .container.about__container
         .about__user
           .user
@@ -43,7 +45,7 @@ block content
             -
               var userInfo = [
                 ['Проживаю','Москва'],
-                ['Возраст','24 года'],
+                ['Возраст','25 лет'],
                 ['Родился','13 ноября 1995']
               ];
 
@@ -65,7 +67,7 @@ block content
         polygon(points='0,0 0,100 1000,100')
       svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--right
         polygon(points='0,100 1000,100 1000,0')
-    section.values
+    section.values(id='skills')
       .container.values__container
         .values__title-wrapper  
           .values__title
@@ -75,7 +77,7 @@ block content
         .values__widget
           .values__widget-container
             #skills-component
-    section.works
+    section.works(id='works')
       .container.works__container
         h2.section-title.works__title Мои работы
         .works__content
@@ -85,7 +87,7 @@ block content
         polygon(points='0,0 0,100 1000,100')
       svg(viewBox='0 0 1000 100' preserveAspectRatio='none').triangles__shape.triangles__shape--position--right
         polygon(points='0,100 1000,100 1000,0')
-  section.reviews
+  section.reviews(id='reviews')
     .container.reviews__container
       #slider-component
   footer.footer
@@ -99,9 +101,9 @@ block content
         .footer__menu
           nav.menu.menu--color--white.footer__menu-elem
             ul.menu__list.footer__menu-list
-              each item in menuItems 
+              each item, ndx in menuItems 
                 li.menu__item
-                  a(href='#').menu__link #{item}
+                  a(href=ids[ndx]).menu__link #{item}
         .footer__content
           .footer__content-info
             .footer__content-text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
@@ -109,27 +111,28 @@ block content
               ul.socials.socials--round
                 each item in socials 
                   li.socials__item
-                    a(href='').socials__link
-                      +icon(item, 'socials__icon')
+                    a(href=item[1]).socials__link
+                      +icon(item[0], 'socials__icon')
           .text-quote.footer__content-quote
               .text-quote__text Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
               .text-quote__author Martin Golding
   
   .hamburger
-    a(href='#').hamburger__close
+    a(href='').hamburger__close
       +icon('cross', 'hamburger__close-icon')
 
     nav.menu.menu--hamburger.hamburger__menu
       ul.menu__list
         - var menuItems2 = ['Главная', 'Обо мне', 'Навыки', 'Работы', 'Отзывы']
-        each item in menuItems2 
+        - var ids2 = ['#homepage', '#about','#skills','#works','#reviews']
+        each item, ndx in menuItems2 
           li.menu__item
-            a(href='#').menu__link #{item}
+            a(href=ids2[ndx]).menu__link #{item}
 
     .hamburger__socials
       ul.socials.hamburger__socials-list
         each item in socials 
           li.socials__item
-            a(href='').socials__link
-              +icon(item, 'socials__icon')
+            a(href=item[1]).socials__link
+              +icon(item[0], 'socials__icon')
         
