--- a/src/styles/blocks/scroll-down-btn.pcss
+++ b/src/styles/blocks/scroll-down-btn.pcss
@@ -6,6 +6,7 @@
   display: inline-block;
   display: flex;
   align-items: center;
+  text-decoration: none;
 
   &::after {
     content: "";
@@ -14,6 +15,15 @@
     width: 13px;
     height: 13px;
     margin-left: 15px;
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    background: svg-load('scroll.svg', fill=$text-color, width=13px, height=13px);
+    width: 13px;
+    height: 13px;
+    margin-right: 15px;
   }
 
   &:focus {
