--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -1,4 +1,3 @@
-
 .slider__header {
   display: flex;
   align-items: center;
@@ -37,10 +36,11 @@
   justify-content: space-between;
 }
 
+.slider__content {
+  height: 280px;
+}
 
-// overwrite swiper styles 
-
-
+// Перебиваем стили swiper
 
 .swiper-slide-active {
   width: 28% !important;
@@ -73,45 +73,5 @@
   @include tablets {
     width: 48% !important;
   }
-
-  @include phones {
-    /* width: unset !important;
-    margin-right: unset !important; */
-  }
 }
-
-
-
-
-/* .slider__content {
-  padding-left: 6%;
-
-
-  @include desktop {
-    padding-right: 9%;
-  }
-
-  @include tablets {
-    padding-right: 0;
-    justify-content: flex-end;
-  }
-}
-
-.slider__quote {
-  width: 56%;
-} */
-
-
-/* .slider__item {
-  width: 32%;
-
-  @include tablets {
-    width: 45%;
-    margin-right: 4%;
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-}  */
 
