--- a/src/styles/blocks/works-preview.pcss
+++ b/src/styles/blocks/works-preview.pcss
@@ -73,10 +73,10 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  max-height: 550px;
+  height: 450px;
   
   @include desktop {
-    max-height: 360px;
+    height: 360px;
   }
 
   @include tablets {
@@ -92,7 +92,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: top;
+  object-position: center;
 }
 
 .works-preview__btns {
