--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -19,8 +19,13 @@
 
 .works__content {
   padding-bottom: 60px;
+  min-height: 590px;
 
   @include desktop {
     padding-bottom: 0;
+  }
+
+  @include tablets {
+    min-height: 870px;
   }
 }
